--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "encoding-japanese": "^2.0.0",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.3",
     "vuetify": "^3.3.4",
     "vuex": "^4.0.0"
