--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vite build",
     "lint": "vue-cli-service lint",
     "dev": "vite",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "gcloud app deploy ./smart-chord-score-editor/app.yaml --project=smart-chord-score-editor --quiet"
   },
   "dependencies": {
     "core-js": "^3.8.3",
