--- a/package.json
+++ b/package.json
@@ -11,41 +11,34 @@
     "deploy": "gcloud app deploy ./smart-chord-score-editor/app.yaml --project=smart-chord-score-editor --quiet"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
     "encoding-japanese": "^2.0.0",
-    "vue": "^3.3.4",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.4",
-    "vuetify": "^3.3.9",
-    "vuex": "^4.0.0"
+    "vue": "^3.4.19",
+    "vue-i18n": "^9.9.1",
+    "vue-router": "^4.3.0",
+    "vuetify": "^3.5.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@mdi/font": "^7.2.96",
-    "@types/encoding-japanese": "^2.0.1",
-    "@types/jest": "^28.1.8",
-    "@types/webfontloader": "^1.6.35",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/vue3-jest": "^28.1.0",
-    "eslint": "^8.45.0",
-    "eslint-plugin-vue": "^9.15.0",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
-    "roboto-fontface": "*",
-    "ts-jest": "^28.0.8",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.6",
-    "vite-plugin-vuetify": "^1.0.2",
-    "vue-cli-plugin-vuetify": "~2.5.8",
-    "webfontloader": "^1.0.0"
+    "@jest/globals": "^29.7.0",
+    "@mdi/font": "^7.4.47",
+    "@types/encoding-japanese": "^2.0.5",
+    "@types/jest": "^29.5.12",
+    "@types/webfontloader": "^1.6.38",
+    "@types/webpack-env": "^1.18.4",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/vue3-jest": "^29.2.6",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.21.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.4",
+    "vite-plugin-vuetify": "^2.0.1",
+    "webfontloader": "^1.6.28"
   }
 }
