--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "encoding-japanese": "^2.0.0",
-    "vue": "^3.4.19",
+    "vue": "~3.4.27",
     "vue-i18n": "^9.9.1",
     "vue-router": "^4.3.0",
-    "vuetify": "^3.5.5",
+    "vuetify": "~3.6.6",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
