--- a/package.json
+++ b/package.json
@@ -8,37 +8,39 @@
     "lint": "vue-cli-service lint",
     "dev": "vite",
     "test": "jest",
-    "deploy": "gcloud app deploy ./smart-chord-score-editor/app.yaml --project=smart-chord-score-editor --quiet"
+    "deploy": "gcloud app deploy ./smart-chord-score-editor/app.yaml --project=smart-chord-score-editor --quiet",
+    "emscripten:build": "ts-node ./script/emscripten/build.ts"
   },
   "dependencies": {
     "encoding-japanese": "^2.0.0",
-    "vue": "~3.4.27",
-    "vue-i18n": "^9.9.1",
-    "vue-router": "^4.3.0",
-    "vuetify": "~3.6.6",
+    "vue": "^3.5.10",
+    "vue-i18n": "^9.14.1",
+    "vue-router": "^4.4.5",
+    "vuetify": "^3.7.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@mdi/font": "^7.4.47",
-    "@types/encoding-japanese": "^2.0.5",
-    "@types/jest": "^29.5.12",
+    "@types/encoding-japanese": "^2.2.1",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^22.7.4",
     "@types/webfontloader": "^1.6.38",
     "@types/webpack-env": "^1.18.4",
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue": "^5.1.4",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/vue3-jest": "^29.2.6",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.26.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^9.28.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
+    "typescript": "^5.6.2",
     "vite": "^5.1.4",
-    "vite-plugin-vuetify": "^2.0.1",
+    "vite-plugin-vuetify": "^2.0.4",
     "webfontloader": "^1.6.28"
   }
 }
